# cdisplayagain

./: .gitignore  AGENTS.md  CI_TESTING.md  CODE_QUALITY_AUDIT.md  CONTRIBUTING.md  CONTRIBUTIONS.md  Dockerfile.ci  MIGRATION_PLAN.md  Makefile  PACKAGING.md  PERFORMANCE.md  README.md  SESSION_SUMMARY.md  TECH_DEBT.md  analyze_profile.py  bugs.md  cdisplayagain.py  coverage.lcov  coverage.xml  docker-compose.yml  image_backend.py  profile_adventure.html  profile_titans.html  pyproject.toml  tasks.md  test_perf.sh
.githooks/: pre-commit
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
docs/: MIGRATION_PLAN.md  PARITY.md  PERFORMANCE.md  PERFORMANCE_HISTORY.md
docs/archive/: CSDISPLAY_RESEARCH.md  TESTING.md
profiles/PIL/: history.md
scripts/: lint.sh
stubs/: pyvips.pyi
stubs/unrar/: __init__.pyi
stubs/unrar/cffi/: __init__.pyi  rarfile.pyi
tests/: conftest.py  create_test_comics.py  test_additional_coverage.py  test_benchmark_parallel.py  test_bug_001_quit_dialog.py  test_cleanup_logging.py  test_context_menu.py  test_coverage_additions.py  test_coverage_to_95.py  test_cursor_operations.py  test_dialog_cancellation_cleanup.py  test_edge_cases.py  test_error_paths.py  test_final_coverage.py  test_first_render.py  test_focus_restorer.py  test_lru_cache.py  test_main_functions.py  test_more_coverage.py  test_page_navigation.py  test_parallel_workers.py  test_parity_tasks.py  test_performance.py  test_photoimage_optimization.py  test_pil_cache.py  test_placeholder_methods.py  test_quit_dialog.py  test_simple_coverage.py  test_threading.py  test_ui_bindings.py  test_ui_features.py  test_ui_helpers.py
tests/fixtures/: test_cbz.cbz
