[project]
name = "cdisplayagain"
version = "0.1.0"
description = "Minimalist, cross-platform remake of the classic CDisplay sequential image viewer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
    "pyvips[binary]>=3.1.1",
    "unrar2-cffi>=0.4.0",
    "pytest-cov>=6.1.0",
    "pytest>=9.0.2",
    "pyright>=1.1.400",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
addopts = ["--cov=cdisplayagain", "--cov-context=test", "--cov-fail-under=96", "--no-cov-on-fail"]
pythonpath = ["."]

[tool.pyright]
include = ["."]
stubPath = "stubs"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "D", "ANN401"]
ignore = ["D203", "D213", "E501"]

[tool.ruff.lint.per-file-ignores]
"stubs/*.pyi" = ["N818"]

[tool.coverage.run]
source = ["."]
omit = [".venv/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.4.0",
]
